[gd_scene load_steps=6 format=3 uid="uid://n78uivx6mb2"]

[ext_resource type="Script" path="res://scenes/handler.gd" id="1_psjy0"]
[ext_resource type="Theme" uid="uid://b084uen2ev7hx" path="res://ui/basic_ui_theme.tres" id="2_dndr5"]
[ext_resource type="Script" path="res://ui/quat_getter.gd" id="3_ji4ys"]
[ext_resource type="PackedScene" uid="uid://j7weec3kdnqh" path="res://scenes/AttitudeScene.tscn" id="4_pkwxa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d77aa"]
bg_color = Color(0.0745098, 0.0745098, 0.0980392, 1)
border_width_top = 2

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Screen" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_psjy0")

[node name="OrbitSceneHUD" type="ColorRect" parent="Screen" groups=["HUDs"]]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
color = Color(0.0745098, 0.0745098, 0.0980392, 0)

[node name="Label" type="Label" parent="Screen/OrbitSceneHUD"]
layout_mode = 2
offset_top = 8.0
offset_right = 189.0
offset_bottom = 31.0
text = "DEVELOPMENT VERSION"

[node name="ControlSceneHUD" type="Panel" parent="Screen" groups=["HUDs"]]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="AttitudeSceneHUD" type="Panel" parent="Screen" groups=["HUDs"]]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_dndr5")

[node name="MarginContainer" type="MarginContainer" parent="Screen/AttitudeSceneHUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Screen/AttitudeSceneHUD/MarginContainer"]
layout_mode = 2
script = ExtResource("3_ji4ys")

[node name="VBoxContainer" type="VBoxContainer" parent="Screen/AttitudeSceneHUD/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Screen/AttitudeSceneHUD/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Atittude quaternion:"

[node name="Label2" type="Label" parent="Screen/AttitudeSceneHUD/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Screen/AttitudeSceneHUD/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Angular velocity (rad/s):"

[node name="Label4" type="Label" parent="Screen/AttitudeSceneHUD/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="Screen/AttitudeSceneHUD/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="Screen/AttitudeSceneHUD/MarginContainer/HBoxContainer/SubViewportContainer"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 0

[node name="AttitudeRoot" parent="Screen/AttitudeSceneHUD/MarginContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_pkwxa")]

[node name="ModeSelectorPanel" type="Panel" parent="Screen"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme_override_styles/panel = SubResource("StyleBoxFlat_d77aa")

[node name="HBoxContainer" type="HBoxContainer" parent="Screen/ModeSelectorPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="NavButtonContainer" type="MarginContainer" parent="Screen/ModeSelectorPanel/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 3

[node name="Button" type="Button" parent="Screen/ModeSelectorPanel/HBoxContainer/NavButtonContainer"]
layout_mode = 2
theme = ExtResource("2_dndr5")
text = "NAV"

[node name="ConButtonContainer2" type="MarginContainer" parent="Screen/ModeSelectorPanel/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 3

[node name="Button" type="Button" parent="Screen/ModeSelectorPanel/HBoxContainer/ConButtonContainer2"]
layout_mode = 2
theme = ExtResource("2_dndr5")
text = "CON"

[node name="AttButtonContainer3" type="MarginContainer" parent="Screen/ModeSelectorPanel/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 3

[node name="Button" type="Button" parent="Screen/ModeSelectorPanel/HBoxContainer/AttButtonContainer3"]
layout_mode = 2
theme = ExtResource("2_dndr5")
text = "ATT"

[connection signal="pressed" from="Screen/ModeSelectorPanel/HBoxContainer/NavButtonContainer/Button" to="Screen" method="_on_nav_button_pressed"]
[connection signal="pressed" from="Screen/ModeSelectorPanel/HBoxContainer/ConButtonContainer2/Button" to="Screen" method="_on_con_button_pressed"]
[connection signal="pressed" from="Screen/ModeSelectorPanel/HBoxContainer/AttButtonContainer3/Button" to="Screen" method="_on_att_button_pressed"]
